editted app.js and navbar again. Troubleshooting missing nav features

--- a/client/src/components/Nav/assets/css/nav.css
+++ b/client/src/components/Nav/assets/css/nav.css
@@ -26,6 +26,11 @@
     background-color: #d2d7df;
 }
 
+.typewriterContainer {
+    text-align: center;
+    background-color: var(--blu);
+}
+
 
 
 /* --------- SideBar Nav Styling From here down --------- */
