had to re-arrange HomePage location within filestructure as well as about us.

--- a/client/src/components/AboutUs/about.css
+++ b/client/src/components/AboutUs/about.css
@@ -1,3 +1,8 @@
+.headerAbout {
+    text-align: center;
+    padding-top: 30px;
+}
+
 .cardContainerAbout {
     justify-content: center;
     text-align: center;
